--- a/style.css
+++ b/style.css
@@ -11,11 +11,14 @@ ul {
 }
 .sobre:hover  {
  color: white;
-
+transition: transform 1s;
+  transform: translateX(0) scale(0.5);
 font-size: 20px;
  
 }
 .projetos:hover {
+ transition: transform 1s;
+  transform: translateX(0) scale(0.5);
  color: white;
  font-size: 20px;
  
