--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-.container {
-  border: 4px solid #777;
-  height: 70vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.titu {
+  align
+}
